update skywalking agent